--- a/charts/octovault/templates/deployment.yaml
+++ b/charts/octovault/templates/deployment.yaml
@@ -39,8 +39,8 @@ spec:
             - "{{ . }}"
             {{- end }}
           env:
-            - name: OVO_OCTOREPO_POLL_INTERVAL
-              value: "{{ .Values.controller.env.OVO_OCTOREPO_POLL_INTERVAL }}"
+            - name: OCTOREPO_POLL_INTERVAL
+              value: "{{ .Values.controller.env.OCTOREPO_POLL_INTERVAL }}"
             {{- if .Values.controller.env.AWS_REGION }}
             - name: AWS_REGION
               value: "{{ .Values.controller.env.AWS_REGION }}"
