refactor: standardizes environment var names (#2)
* refactor: remove OV_ prefix from environment keys

* refactor: OCTOREPO_POLL_INTERVAL to GIT_CRED_TTL

* chore: fmt

* chore: add missing env for chart values

fix: chart version

--- a/charts/octovault/templates/deployment.yaml
+++ b/charts/octovault/templates/deployment.yaml
@@ -39,8 +39,8 @@ spec:
             - "{{ . }}"
             {{- end }}
           env:
-            - name: OVO_OCTOREPO_POLL_INTERVAL
-              value: "{{ .Values.controller.env.OVO_OCTOREPO_POLL_INTERVAL }}"
+            - name: GIT_CRED_TTL
+              value: "{{ .Values.controller.env.GIT_CRED_TTL }}"
             {{- if .Values.controller.env.AWS_REGION }}
             - name: AWS_REGION
               value: "{{ .Values.controller.env.AWS_REGION }}"
